--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main-text">
         By: Reid Bruski <br /> Date: 12.13.24
     </div>
-    <div>
+    <div class="content">
         <a href="https://nolmon1.github.io/Testing/testing.html/">
             gang
         </a>
