--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         By: Reid Bruski <br /> Date: 12.13.24
     </div>
     <div class="content">
-        <a href="https://nolmon1.github.io/Testing/testing.html/">
+        <a href="https://nolmon1.github.io/Testing/website/stem.html/">
             this is a test. this is a test, this is a test. this is a test
         </a>
     </div>
