--- a/index.html
+++ b/index.html
@@ -4,17 +4,37 @@
 <head>
     <meta charset="utf-8" />
     <title>Super Can!</title>
-    <link rel="stylesheet" href="StyleSheet1.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>The Super Can!</h1>
-    <div class="main-text">
-        By: Reid Bruski <br /> Date: 12.13.24
-    </div>
-    <div class="content">
-        <a href="https://nolmon1.github.io/Testing/website/stem.html">
-            this is a test. this is a test, this is a test. this is a test
-        </a>
-    </div>
+    <header>
+        <h1>The Super Can!</h1>
+        <div class="main-text">
+            By: Reid Bruski <br /> Date: 12.13.24
+        </div>
+        <div class="main-text">
+            <a href="https://nolmon1.github.io/Testing/website/design.html">
+                Design
+            </a>
+            <a href="https://nolmon1.github.io/Testing/website/justification.html">
+                Justification
+            </a>
+            <a href="https://nolmon1.github.io/Testing/website/previousattempts.html">
+                Previous Attempts
+            </a>
+            <a href="https://nolmon1.github.io/Testing/website/problemstatement.html">
+                Problem Statement
+            </a>
+            <a href="https://nolmon1.github.io/Testing/website/reallifeimplications.html">
+                Real Life Implications
+            </a>
+            <a href="https://nolmon1.github.io/Testing/website/stem.html">
+                STEM
+            </a>
+            <a href="https://nolmon1.github.io/Testing/website/testing.html">
+                Testing
+            </a>
+        </div>
+    </header>
 </body>
 </html>
