--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Super Can!</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="website/style.css" />
 </head>
 <body>
     <header>
