--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="main-text">
             By: Reid Bruski <br /> Date: 12.13.24
         </div>
-        <div class="main-text">
+        <div class="links">
             <a href="https://nolmon1.github.io/Testing/website/design.html">
                 Design
             </a>
