--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -13,28 +13,39 @@
             By: Reid Bruski <br /> Date: 12.13.24
         </div>
         <div class="links">
-            <a href="https://nolmon1.github.io/Testing/website/design.html">
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/design.html">
                 Design
             </a>
-            <a href="https://nolmon1.github.io/Testing/website/justification.html">
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/justification.html">
                 Justification
             </a>
-            <a href="https://nolmon1.github.io/Testing/website/previousattempts.html">
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/previousattempts.html">
                 Previous Attempts
             </a>
-            <a href="https://nolmon1.github.io/Testing/website/problemstatement.html">
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/problemstatement.html">
                 Problem Statement
             </a>
-            <a href="https://nolmon1.github.io/Testing/website/reallifeimplications.html">
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/reallifeimplications.html">
                 Real Life Implications
             </a>
-            <a href="https://nolmon1.github.io/Testing/website/stem.html">
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/stem.html">
                 STEM
             </a>
-            <a href="https://nolmon1.github.io/Testing/website/testing.html">
-                Testing
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/Reusable-Metal-can.html">
+                Reusable-Metal-can
             </a>
         </div>
     </header>
+    <div class="main-text">
+        <h1>
+            A Resuable metal can
+            <br />
+            Reid Bruski
+        </h1>
+        Hi! I'm Reid Bruski, a current senior at Central Magnet School. 
+        I was born around Detroit, Michigan, but have been living here in
+        Tennessee since I was 5. One of my biggest passions lies in anything mechanical,
+        anything that I can get my hands on that moves.
+    </div>
 </body>
 </html>
