--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
         <h1>
             A Resuable metal can
             <br />
-            Reid Bruski
+            <h2>Reid Bruski</h2>
         </h1>
+        <img src="website/DSC02560.JPG" />
         Hi! I'm Reid Bruski, a current senior at Central Magnet School. 
         I was born around Detroit, Michigan, but have been living here in
         Tennessee since I was 5. One of my biggest passions lies in anything mechanical,
