--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <a href="https://nolmon1.github.io/Reusable-Metal-can/website/stem.html">
                 STEM
             </a>
-            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/Reusable-Metal-can.html">
-                Reusable-Metal-can
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/Testing">
+                Testing
             </a>
         </div>
     </header>
@@ -43,6 +43,7 @@
             <h2>Reid Bruski</h2>
         </h1>
         <img class="img" src="website/DSC02560.JPG" />
+        <br />
         Hi! I'm Reid Bruski, a current senior at Central Magnet School. 
         I was born around Detroit, Michigan, but have been living here in
         Tennessee since I was 5. One of my biggest passions lies in anything mechanical,
