--- a/website/index.html
+++ b/website/index.html
@@ -4,17 +4,50 @@
 <head>
     <meta charset="utf-8" />
     <title>Super Can!</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="website/style.css" />
 </head>
 <body>
-    <h1>The Super Can!</h1>
+    <header>
+        <h1>The Super Can!</h1>
+        <div class="main-text">
+            By: Reid Bruski <br /> Date: 12.13.24
+        </div>
+        <div class="links">
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/design.html">
+                Design
+            </a>
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/justification.html">
+                Justification
+            </a>
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/previousattempts.html">
+                Previous Attempts
+            </a>
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/problemstatement.html">
+                Problem Statement
+            </a>
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/reallifeimplications.html">
+                Real Life Implications
+            </a>
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/stem.html">
+                STEM
+            </a>
+            <a href="https://nolmon1.github.io/Reusable-Metal-can/website/testing">
+                Testing
+            </a>
+        </div>
+    </header>
     <div class="main-text">
-        By: Reid Bruski <br /> Date: 12.13.24
-    </div>
-    <div class="content">
-        <a href="https://nolmon1.github.io/Testing/website/stem.html/">
-            this is a test. this is a test, this is a test. this is a test
-        </a>
+        <h1>
+            A Resuable metal can
+            <br />
+            <h2>Reid Bruski</h2>
+        </h1>
+        <img class="img" src="website/DSC02560.JPG" />
+        <br />
+        Hi! I'm Reid Bruski, a current senior at Central Magnet School. 
+        I was born around Detroit, Michigan, but have been living here in
+        Tennessee since I was 5. One of my biggest passions lies in anything mechanical,
+        anything that I can get my hands on that moves.
     </div>
 </body>
 </html>
