--- a/website/previousattempts.html
+++ b/website/previousattempts.html
@@ -21,7 +21,7 @@
         This calls for more efficency in the use of land and the use of time in humanitarian efforts. As agricultural technology advances, the efficency of arable land increases, however, many of these
         innovations aren't accessible to individual or small farms due to the high cost of entry
     </div>
-    <div>
+    <div class="content">
         The biggest strength of current humanitarian efforts is the sheer size. With the amount of funding they recieve, they are able to do much, with many volunteers and coordinators. However,
         more efficency means moer can be done with the same amount of resources. 
         <br />
