--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Super Can!</title>
+    <title>A Reusable Metal can</title>
     <link rel="stylesheet" href="website/style.css" />
 </head>
 <body>
     <header>
-        <h1>The Super Can!</h1>
+        <h1>A Reusable Metal can</h1>
         <div class="main-text">
             By: Reid Bruski <br /> Date: 12.13.24
         </div>
@@ -16,21 +16,27 @@
             <a href="https://nolmon1.github.io/Reusable-Metal-can/website/design.html">
                 Design
             </a>
+            |
             <a href="https://nolmon1.github.io/Reusable-Metal-can/website/justification.html">
                 Justification
             </a>
+            |
             <a href="https://nolmon1.github.io/Reusable-Metal-can/website/previousattempts.html">
                 Previous Attempts
             </a>
+|
             <a href="https://nolmon1.github.io/Reusable-Metal-can/website/problemstatement.html">
                 Problem Statement
             </a>
+            <br />
             <a href="https://nolmon1.github.io/Reusable-Metal-can/website/reallifeimplications.html">
                 Real Life Implications
             </a>
+            |
             <a href="https://nolmon1.github.io/Reusable-Metal-can/website/stem.html">
                 STEM
             </a>
+            |
             <a href="https://nolmon1.github.io/Reusable-Metal-can/website/testing">
                 Testing
             </a>
