--- a/website/testing.html
+++ b/website/testing.html
@@ -12,7 +12,19 @@
         By: Reid Bruski <br /> Date: 12.13.24
     </div>
     <div class="content">
-
+        Much of the testing done was solely on materials, as the concept of preserving food has been well proven through many many years. 
+        I chose 3 different metals to test, mild steel, galvanized steel, and aluminum 5052. I did 2 tests, one to measure the 
+        ease of use, with a emphasis on current materials used in manufacturing, and a simulated environment test.
+        <br />
+        First was the environment test. I took a small sheet of each metal and left it exposed to the elements for several weeks. This was
+        to test the worst case scenario, in which the cans are not kept in a place where they would be safe from environmental conditions. 
+        There were no specific measurements taken, just effects over time observed.
+        <br />
+        Both the galvanized steel and aluminum showed no corrosion after testing. Both have corrosion-resistant properties, which makes them extremely
+        viable for environments like this. There is potential for the galvanized steel to rust on surfaces where it has been cut, though this was not
+        observed. The mild steel did show significant rusting. It was just surface rust, which could eventually flake off, resulting in material lost.
+        The rust could also progress to where it is pitting, which also results in material lost. The rust becomes dangerous to any potential food
+        stored inside the can, especially as material is lost and more material is exposed to air and oxidized. This makes 
     </div>
 </body>
 </html>
